--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass"
   ],
   "dependencies": {
+    "assert": "^1.3.0",
     "bcryptjs": "^2.1.0",
     "coffee-script": "^1.9.1",
     "ejs": "~2.3.2",
@@ -39,6 +40,7 @@
     "rc": "~0.5.0",
     "sails": "~0.11.0-rc4",
     "sails-disk": "~0.10.0",
+    "sinon": "^1.15.4",
     "supertest": "^1.0.1",
     "validator": "^3.37.0"
   },
